[tool.poetry]
name = "artigo_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
python-dateutil = "^2.8.1"
grpcio = "^1.47.0"
grpcio-tools = "^1.47.0"
drf-spectacular = "^0.22.0"
django = "^4.0.5"
django-allauth = "^0.51.0"
django-environ = "^0.9.0"
django-filter = "^22.1"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.3"
drf-jwt = "^1.19.0"
dj-rest-auth = "^2.1.11"
Markdown = "^3.3.4"
psycopg2-binary = { version = "^2.8.6", platform = "linux" }
psycopg2 = { version = "^2.8.6", markers = "platform_machine != 'x86_64'"}
celery = "^5.2.7"
pandas = "^1.4.3"
pygments-pprint-sql = "^0.1.0"
pyjwt = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.4.0"
pymemcache = "^3.5.0"
tqdm = "^4.64.0"
redisai = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^5.0.2"
isort = "^5.5.2"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=frontend --cov-report=html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
