[tool.poetry]
name = "artigo_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.2"
grpcio = "1.48.1"
grpcio-tools = "1.48.1"
drf-spectacular = "^0.24.2"
django = "^4.1.5"
django-allauth = "^0.51.0"
django-environ = "^0.9.0"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
drf-jwt = "^1.19.2"
dj-rest-auth = "^2.2.6"
Markdown = "^3.4.1"
psycopg2-binary = { version = "^2.9.5", platform = "linux" }
psycopg2 = { version = "^2.9.5", markers = "platform_machine != 'x86_64'"}
celery = "^5.2.7"
pandas = "^1.5.2"
pygments-pprint-sql = "^0.1.0"
pyjwt = "^2.6.0"
pymemcache = "^4.0.0"
tqdm = "^4.64.1"
redis = "^4.5.0"
uwsgi = "^2.0.21"
imageio = "^2.9.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
isort = "^5.11.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=frontend --cov-report=html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
