[tool.poetry]
name = "artigo_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "2.*"
grpcio = "1.*"
grpcio-tools = "1.*"
drf-spectacular = "0.*"
django = "4.*"
django-allauth = "^0.63.0"
django-environ = "0.*"
django-filter = "24.*"
django-cors-headers = "4.*"
django-extensions = "3.*"
djangorestframework = "3.*"
drf-jwt = "1.*"
dj-rest-auth = "4.*"
Markdown = "3.*"
psycopg2-binary = { version = "^2.9.5", platform = "linux" }
psycopg2 = { version = "^2.9.5", markers = "platform_machine != 'x86_64'"}
celery = "5.*"
pandas = "2.*"
pygments-pprint-sql = "~0.1.0"
pyjwt = "2.*"
pymemcache = "4.*"
tqdm = "4.*"
redis = "5.*"
uwsgi = "2.*"
imageio = "2.*"
urllib3 = "2.*"
aiohttp = "3.*"
asyncio = "3.*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "7.*"
pytest-cov = "4.*"
pytest-django = "4.*"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=frontend --cov-report=html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

