[tool.poetry]
name = "artigo_search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opensearch-py = "^1.0.0"
opensearch-dsl = "^1.0.0"
grpcio = "1.44.0"
grpcio-tools = "1.44.0"
aiohttp = "^3.8.1"
celery = "^5.0.5"
redisai = "^1.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
isort = "^5.5.2"
mypy-protobuf = "^3.2"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
