[tool.poetry]
name = "artigo_search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opensearch-py = "2.*"
opensearch-dsl = "2.*"
grpcio = "1.*"
grpcio-tools = "1.*"
django-environ = "0.*"
aiohttp = "3.*"
celery = "5.*"
pytest = "7.*"
pytest-cov = "4.*"
redis = "5.*"
urllib3 = "2.*"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy-protobuf = "3.*"
pytz = "~2023"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

